login funzionante mancano pagine thymealef

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,14 +10,13 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update, none)
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 
 # Data formatting 
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
-
-#! impostazioni aggiuntive, utili per il testing (rimuovibile poi)
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
