--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,9 @@ spring.application.name=final_project_java
 spring.datasource.url=jdbc:mysql://localhost:3306/FraFlix
 spring.datasource.username=root
 spring.datasource.password=root
-
-## Hibernate properties 
-# the sql dialect makes hibernate generate better sql for the chosen database
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# opzionale, ma puoi esplicitarlo:
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate ddl auto (create, create-drop, validate, update, none)
 spring.jpa.hibernate.ddl-auto=update
